force-app/main/default/objects/BRM_IT_Form__c/fields/IT_Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>IT_Cost_Estimate__c</fullName>
    <inlineHelpText>Include all anticipated costs, including hardware, licensing, implementation and maintenance. For internal labor, use $50 per hour as a blended onshored/offshore rate.</inlineHelpText>
    <label>IT Cost Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$ 0 - $4,999</fullName>
            </value>
            <value>
                <fullName>$5,000 - $9,999</fullName>
            </value>
            <value>
                <fullName>$10,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>$25,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>$50,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>$100,000 - $249,999</fullName>
            </value>
            <value>
                <fullName>$250,000 - $499,999</fullName>
            </value>
            <value>
                <fullName>$500,000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>