force-app/main/default/objects/BRM_IT_Form__c/fields/IT_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>IT_Risk_Assessment__c</fullName>
    <label>IT Risk Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - No new technology being implemented or is standard process</fullName>
            </value>
            <value>
                <fullName>1 - Existing HRC technology, but nonstandard process (configured, not customized)</fullName>
            </value>
            <value>
                <fullName>2 - Existing HRC technology but requires integration, new toolset, or local customization</fullName>
            </value>
            <value>
                <fullName>3 - Existing HRC technology but a new module, or mature technology that is new to HRC</fullName>
            </value>
            <value>
                <fullName>4 - Cutting edge technology that is new to HRC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>