force-app/main/default/objects/BRM_IT_Form__c/fields/IT_Skillsets__c.field-meta.xml
<CustomField>
    <fullName>IT_Skillsets__c</fullName>
    <description>IT tower list.

-- Modified as part of CR00032940 | IT-REQ-1779</description>
    <label>IT Towers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Everest</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
                <label>Digital Commercial &amp; Service</label>
            </value>
            <value>
                <fullName>Custom Apps</fullName>
            </value>
            <value>
                <fullName>Content Mgmt</fullName>
                <label>Digital Web, Commerce &amp; Content Mgmt</label>
            </value>
            <value>
                <fullName>SAP &amp; Boundary Apps</fullName>
            </value>
            <value>
                <fullName>JDE &amp; Boundary Apps</fullName>
                <label>JDE &amp; COTS ERP</label>
            </value>
            <value>
                <fullName>PLM (Engg Apps)</fullName>
            </value>
            <value>
                <fullName>HR Cots</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Infra – Tech Support (L2/L3)</fullName>
            </value>
            <value>
                <fullName>COE ERP</fullName>
            </value>
            <value>
                <fullName>COE Functional Apps</fullName>
            </value>
            <value>
                <fullName>COE Infrastructure, Network, Server, Telecom</fullName>
            </value>
            <value>
                <fullName>COE Integration</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Digital Sales</fullName>
            </value>
            <value>
                <fullName>Digital Service</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>COE Infrastructure</fullName>
                <isActive>false</isActive>
                <label>COE Infrastructure</label>
            </value>
            <value>
                <fullName>COE Network</fullName>
                <isActive>false</isActive>
                <label>COE Network</label>
            </value>
            <value>
                <fullName>COE Telecom</fullName>
                <isActive>false</isActive>
                <label>COE Telecom</label>
            </value>
            <value>
                <fullName>Cots ERP &amp; Others</fullName>
                <isActive>false</isActive>
                <label>Cots ERP &amp; Others</label>
            </value>
            <value>
                <fullName>Digital &amp; Field Services</fullName>
                <isActive>false</isActive>
                <label>Digital &amp; Field Services</label>
            </value>
            <value>
                <fullName>Generic - BA CRM</fullName>
                <isActive>false</isActive>
                <label>Generic - BA CRM</label>
            </value>
            <value>
                <fullName>Generic - BA Comm Ops</fullName>
                <isActive>false</isActive>
                <label>Generic - BA Comm Ops</label>
            </value>
            <value>
                <fullName>Generic - BA Engineering</fullName>
                <isActive>false</isActive>
                <label>Generic - BA Engineering</label>
            </value>
            <value>
                <fullName>Generic - BA Finance</fullName>
                <isActive>false</isActive>
                <label>Generic - BA Finance</label>
            </value>
            <value>
                <fullName>Generic - BA Global Operations</fullName>
                <isActive>false</isActive>
                <label>Generic - BA Global Operations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>