force-app/main/default/objects/BRM_IT_Form__c/fields/IT_Solution_Lead__c.field-meta.xml
<CustomField>
    <fullName>IT_Solution_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IT individual responsible for delivery of the request

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>IT individual responsible for delivery of the request</inlineHelpText>
    <label>IT Solution Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BRM_IT_Forms4</relationshipName>
    <type>Lookup</type>
</CustomField>