force-app/main/default/objects/BRM_IT_Form__c/fields/IT_Time_Estimate_Hours__c.field-meta.xml
<CustomField>
    <fullName>IT_Time_Estimate_Hours__c</fullName>
    <inlineHelpText>This represents effort time, not lead time to complete the task</inlineHelpText>
    <label>IT Time Estimate (Hours)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>