force-app/main/default/objects/BRM_IT_Form__c/fields/Magnitude_of_Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Magnitude_of_Business_Impact__c</fullName>
    <description>Provides business impact of request

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Provide business impact of request</inlineHelpText>
    <label>Magnitude of Business Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Run - Keeps the lights on</fullName>
            </value>
            <value>
                <fullName>Grow - Makes money</fullName>
            </value>
            <value>
                <fullName>Transform - It is revolutionary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>