force-app/main/default/objects/BRM_IT_Form__c/fields/Multiple_CRs__c.field-meta.xml
<CustomField>
    <fullName>Multiple_CRs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple CRs</label>
    <type>Checkbox</type>
</CustomField>