force-app/main/default/objects/BRM_IT_Form__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <inlineHelpText>Red: End date expected to be late or is late, or there is unapproved scope creep....................................
Yellow: End date is at risk of being late, or there is mitigated scope creep............................................
Green: End date expected to be on-time, and scope is static or changes are approved.</inlineHelpText>
    <label>Overall Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#33CC00</color>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>