force-app/main/default/objects/BRM_IT_Form__c/fields/Primary_IT_Tower__c.field-meta.xml
<CustomField>
    <fullName>Primary_IT_Tower__c</fullName>
    <label>Primary IT Tower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Everest</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Custom Apps</fullName>
            </value>
            <value>
                <fullName>Content Mgmt</fullName>
            </value>
            <value>
                <fullName>SAP &amp; Boundary Apps</fullName>
            </value>
            <value>
                <fullName>JDE &amp; Boundary Apps</fullName>
            </value>
            <value>
                <fullName>Cots ERP &amp; Others</fullName>
            </value>
            <value>
                <fullName>PLM (Engg Apps)</fullName>
            </value>
            <value>
                <fullName>HR Cots</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Infra – Tech Support (L2/L3)</fullName>
            </value>
            <value>
                <fullName>SAP Concur</fullName>
            </value>
            <value>
                <fullName>Digital &amp; Field Services</fullName>
                <isActive>false</isActive>
                <label>Digital &amp; Field Services</label>
            </value>
            <value>
                <fullName>Human Resources</fullName>
                <isActive>false</isActive>
                <label>Human Resources</label>
            </value>
            <value>
                <fullName>Infrastructure L2/L3</fullName>
                <isActive>false</isActive>
                <label>Infrastructure L2/L3</label>
            </value>
            <value>
                <fullName>Integration</fullName>
                <isActive>false</isActive>
                <label>Integration</label>
            </value>
            <value>
                <fullName>JDE</fullName>
                <isActive>false</isActive>
                <label>JDE</label>
            </value>
            <value>
                <fullName>Other ERP</fullName>
                <isActive>false</isActive>
                <label>Other ERP</label>
            </value>
            <value>
                <fullName>PLM</fullName>
                <isActive>false</isActive>
                <label>PLM</label>
            </value>
            <value>
                <fullName>Portal and Content</fullName>
                <isActive>false</isActive>
                <label>Portal and Content</label>
            </value>
            <value>
                <fullName>SAP (SAP, Hybris, Concur)</fullName>
                <isActive>false</isActive>
                <label>SAP (SAP, Hybris, Concur)</label>
            </value>
            <value>
                <fullName>Web Apps (Custom Apps)</fullName>
                <isActive>false</isActive>
                <label>Web Apps (Custom Apps)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>