force-app/main/default/objects/BRM_IT_Form__c/fields/Prioritization_Date__c.field-meta.xml
<CustomField>
    <fullName>Prioritization_Date__c</fullName>
    <description>Captures the date when Gate is updated to Prioritization.

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <label>Prioritization Date</label>
    <type>Date</type>
</CustomField>