force-app/main/default/objects/BRM_IT_Form__c/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <description>Created as part of CR00030628</description>
    <label>Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>