force-app/main/default/objects/BRM_IT_Form__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <inlineHelpText>Description of the problem that needs to be solved in &lt;30 words</inlineHelpText>
    <label>Problem Statement</label>
    <length>200</length>
    <type>Text</type>
</CustomField>