force-app/main/default/objects/BRM_IT_Form__c/fields/Realized_Value_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Realized_Value_Commentary__c</fullName>
    <label>Realized Value Commentary</label>
    <type>TextArea</type>
</CustomField>