force-app/main/default/objects/BRM_IT_Form__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>This field captures the “Sprint” details. It will be used for both the Waterfall and agile deveopments.</description>
    <label>Release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>