force-app/main/default/objects/BRM_IT_Form__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business person making the request

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Business person making the request</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BRM_IT_Forms3</relationshipName>
    <type>Lookup</type>
</CustomField>