force-app/main/default/objects/BRM_IT_Form__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <label>Risk Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal &amp; Regulatory</fullName>
            </value>
            <value>
                <fullName>Technical / Support</fullName>
            </value>
            <value>
                <fullName>Revenue / Customer</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Operational Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>