force-app/main/default/objects/BRM_IT_Form__c/fields/Scheduled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_Date__c</fullName>
    <formula>Change_Request__r.BMCServiceDesk__Scheduled_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled End Date</label>
    <type>DateTime</type>
</CustomField>