force-app/main/default/objects/BRM_IT_Form__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
    <relationshipLabel>BRM IT Forms</relationshipLabel>
    <relationshipName>BRM_IT_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>