force-app/main/default/objects/BRM_IT_Form__c/fields/SR_Created__c.field-meta.xml
<CustomField>
    <fullName>SR_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SR Created</label>
    <type>Checkbox</type>
</CustomField>