force-app/main/default/objects/BRM_IT_Form__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Captures the date when status is updated to In Progress

-- Modified as part of CR00032940 | IT-REQ-1779</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>