force-app/main/default/objects/BRM_IT_Form__c/fields/Strategic_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Priorities__c</fullName>
    <description>Provide alignment to the company strategic priorities

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Provide alignment to the company strategic priorities</inlineHelpText>
    <label>Strategic Priorities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advancing differentiated solutions and innovation</fullName>
            </value>
            <value>
                <fullName>Driving operational execution and strong financial performance</fullName>
            </value>
            <value>
                <fullName>Expanding internationally and penetrating emerging markets</fullName>
            </value>
            <value>
                <fullName>Transforming the portofolio with select M&amp;A and optimization initiatives</fullName>
            </value>
            <value>
                <fullName>Foundational</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>