force-app/main/default/objects/BRM_IT_Form__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>IT Strategy</fullName>
            </value>
            <value>
                <fullName>New Product Intro</fullName>
            </value>
            <value>
                <fullName>OMS Other</fullName>
            </value>
            <value>
                <fullName>OMS VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>