force-app/main/default/objects/BRM_IT_Form__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <description>Original date request was made

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Original date request was made</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>