force-app/main/default/objects/BRM_IT_Form__c/fields/Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Completion_Date__c</fullName>
    <inlineHelpText>If a Remedy ticket is associated to this request, this will be set to the ticket Due Date</inlineHelpText>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>