force-app/main/default/objects/BRM_IT_Form__c/fields/Time_of_days_after_Close_to_Analyze__c.field-meta.xml
<CustomField>
    <fullName>Time_of_days_after_Close_to_Analyze__c</fullName>
    <inlineHelpText>Number of day after close to analyze value attainment</inlineHelpText>
    <label>Time to Analyze Value Attainment</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>