force-app/main/default/objects/BRM_IT_Form__c/fields/Value_Realized__c.field-meta.xml
<CustomField>
    <fullName>Value_Realized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value Realized</label>
    <type>Checkbox</type>
</CustomField>