force-app/main/default/objects/BRM_IT_Form__c/fields/Work_Instr_Training_Doc_Rev_Required__c.field-meta.xml
<CustomField>
    <fullName>Work_Instr_Training_Doc_Rev_Required__c</fullName>
    <inlineHelpText>Do Work Instructions or Training documents require revision with this change?</inlineHelpText>
    <label>Work Instr / Training Doc Rev Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>