force-app/main/default/objects/BRM_IT_Form__c/validationRules/Annual_Revenue_Loss_Avoid_Cannot_be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue_Loss_Avoid_Cannot_be_Zero</fullName>
    <active>true</active>
    <description>Annual Revenue Loss Avoidance cannot be zero if Business Risk Severity is selected as No Impact and Gate is Opportunity.

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <errorConditionFormula>ISPICKVAL( Gate__c, &apos;Opportunity&apos;) &amp;&amp;
ISPICKVAL( Business_Risk_Severity__c , &apos;No impact&apos;) &amp;&amp;
Annual_Revenue_Loss_Avoidance__c = 0</errorConditionFormula>
    <errorDisplayField>Annual_Revenue_Loss_Avoidance__c</errorDisplayField>
    <errorMessage>Annual Revenue Loss Avoidance should be more than zero.</errorMessage>
</ValidationRule>