force-app/main/default/objects/BRM_IT_Form__c/validationRules/Applications_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Applications_required</fullName>
    <active>true</active>
    <description>Created as part of CR CR00030892</description>
    <errorConditionFormula>(ISPICKVAL(Gate__c , &apos;Opportunity&apos;) || ISPICKVAL(Gate__c ,&apos;Value Prioritization&apos;) || (ISPICKVAL(Gate__c ,&apos;Execute&apos;) &amp;&amp; ISPICKVAL(Status__c ,&apos;PENDING&apos;))|| (ISPICKVAL(Gate__c ,&apos;Execute&apos;) &amp;&amp; ISPICKVAL(Status__c ,&apos;IN PROGRESS&apos;)) ||
ISPICKVAL(Gate__c ,&apos;Value Realization&apos;) )&amp;&amp; ( ISNULL( Application__c ) || ISBLANK(Application__c ))</errorConditionFormula>
    <errorDisplayField>Application__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>