force-app/main/default/objects/BRM_IT_Form__c/validationRules/Business_Value_Category_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Value_Category_required</fullName>
    <active>true</active>
    <description>Created as part of CR CR00030892</description>
    <errorConditionFormula>(ISPICKVAL(Gate__c , &apos;Opportunity&apos;) || ISPICKVAL(Gate__c ,&apos;Value Prioritization&apos;) || (ISPICKVAL(Gate__c ,&apos;Execute&apos;) &amp;&amp; ISPICKVAL(Status__c ,&apos;PENDING&apos;))|| (ISPICKVAL(Gate__c ,&apos;Execute&apos;) &amp;&amp; ISPICKVAL(Status__c ,&apos;IN PROGRESS&apos;)) ||
ISPICKVAL(Gate__c ,&apos;Value Realization&apos;)  )&amp;&amp;(ISCHANGED(Business_Value_Category__c ) &amp;&amp; ISPICKVAL( Business_Value_Category__c ,&apos;&apos;) )</errorConditionFormula>
    <errorDisplayField>Business_Value_Category__c</errorDisplayField>
    <errorMessage>Required</errorMessage>
</ValidationRule>