force-app/main/default/objects/BRM_IT_Form__c/validationRules/Change_Request_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Request_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>((ISPICKVAL(Gate__c , &apos;Execute&apos;) &amp;&amp; ISPICKVAL(Status__c, &apos;IN PROGRESS&apos;) ) || ISPICKVAL(Gate__c , &apos;Value Realization&apos;))&amp;&amp; 
(ISPICKVAL(CR_To_Be_Created__c,&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>CR_To_Be_Created__c</errorDisplayField>
    <errorMessage>Please enter the value for CR to be created.</errorMessage>
</ValidationRule>